--- a/Views/Home/Edit.cshtml
+++ b/Views/Home/Edit.cshtml
@@ -1,9 +1,77 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-   
-}
+﻿@model AddMovieModel
 
-<h1>Edit</h1>
+<body>
+    @using (Html.BeginForm())
+    {
+        <div class="editMovie">
+            <h1>Edit</h1>
+            
+            <fieldset  class="form-group" asp-action="ShowMovies" method="post">
+                @*Passing in the movieId so that they match up in the ShowMovies view and can edit correctly*@
+                @Html.HiddenFor(Model => Model.movieId)
 
+                <div>
+                    <label asp-for="category">Category</label>
+                    <input class="form-control" id="category" asp-for="category" />
+                </div>
+
+                <br />
+                <div>
+                    <label asp-for="title">Title</label>
+                    <input class="form-control" id="title" asp-for="title" />
+                </div>
+
+                <br />
+                <div>
+                    <label asp-for="year">Year</label>
+                    <input class="form-control" id="year" asp-for="year" />
+                </div>
+
+                <br />
+                <div>
+                    <label asp-for="director">Director</label>
+                    <input class="form-control" id="director" asp-for="director" />
+                </div>
+
+                <br />
+                <div>
+                    <label asp-for="rating">Rating</label>
+                    <select class="form-control" name="rating" id="rating" asp-for="rating">
+                        <option value="">Select One</option>
+                        <option value="g">G</option>
+                        <option value="pg">PG</option>
+                        <option value="pg13">PG-13</option>
+                        <option value="r">R</option>
+                    </select>
+                </div>
+
+                <br />
+                <div>
+                    <label asp-for="edited">Edited</label>
+                    <select class="form-control" name="edited" id="edited" asp-for="edited">
+                        <option value="">Select One</option>
+                        <option value="true">Yes</option>
+                        <option value="false">No</option>
+                    </select>
+                </div>
+
+                <br />
+                <div>
+                    <label asp-for="lent">Lent To</label>
+                    <input class="form-control" id="lent" asp-for="lent" />
+                </div>
+
+                <br />
+                <div>
+                    <label asp-for="notes">Notes</label>
+                    <input class="form-control" id="notes" asp-for="notes" />
+                    <br />
+                </div>
+
+                <br />
+                <input class="btn btn-dark" type="submit" value="Save Movie" id="editButton" />
+                <div asp-validation-summary="All"></div>
+            </fieldset>
+        </div>
+    }
+</body>
