--- a/Views/Home/ShowMovies.cshtml
+++ b/Views/Home/ShowMovies.cshtml
@@ -10,13 +10,13 @@
 <div>
     <h3>Here is a List of all your Movies Added:</h3>
 
-    <table>
+    <table class="table table-bordered table-striped">
         <thead>
-            <tr><th>Category</th><th>Title</th><th>Year</th><th>Director</th><th>Rating</th><th>Edited</th><th>Lent To:</th><th>Notes</th><th></th>
+            <tr><th>Category</th><th>Title</th><th>Year</th><th>Director</th><th>Rating</th><th>Edited</th><th>Lent To</th><th>Notes</th><th></th>
         </thead>
 
         <tbody>
-                @foreach (CadenAssignment3FilmCollection.Models.AddMovieModel x in Model)
+                @foreach (AddMovieModel x in Model)
                 {                    
                     <tr>
                         @*<td>
@@ -26,17 +26,18 @@
                                 <button type="submit">Edit</button>
                             </form>
                         </td>*@
-                        <td>@x.category</td>
-                        <td>@x.title</td>
-                        <td>@x.year</td>
-                        <td>@x.director</td>
-                        <td>@x.rating</td>
-                        <td>@x.edited</td>
-                        <td>@x.lent</td>
-                        <td>@x.notes</td>
+                        <td class="text-left">@x.category</td>
+                        <td class="text-center">@x.title</td>
+                        <td class="text-center">@x.year</td>
+                        <td class="text-center">@x.director</td>
+                        <td class="text-center">@x.rating</td>
+                        <td class="text-center">@x.edited</td>
+                        <td class="text-center">@x.lent</td>
+                        <td class="text-left">@x.notes</td>
                         <td>
                             @Html.ActionLink("Edit", "Edit", new { id = x.movieId }) |
-                            @Html.ActionLink("Delete", "Delete", new { id=x.movieId})
+                            @Html.ActionLink("Delete", "Delete", new { id = x.movieId})
+
                             @*<form asp-page-handler="Remove" method="post">
                                 <input type="hidden" name="movieId"
                                        value="@x.movieId" />
