--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using CadenAssignment3FilmCollection
 @using CadenAssignment3FilmCollection.Models
+@using CadenAssignment3FilmCollection.Models.ViewModels
 @using CadenAssignment3FilmCollection.Controllers
 @addTagHelper "*, Microsoft.AspNetCore.Mvc.TagHelpers"
