--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,7 +1,8 @@
 ﻿@{
-    ViewBag.Title = "The Joel Hilton Film Collection";
+    ViewBag.Title = "Welcome!";
 }
 
+<h1>Welcome!</h1>
 <div>
     <img src="~/JoelHilton.jpg" />
 </div>
