--- a/Views/Home/Podcasts.cshtml
+++ b/Views/Home/Podcasts.cshtml
@@ -5,7 +5,7 @@
 <body>
     <div>
         <h2>Check out my Podcasts</h2>
-        <a href="https://baconsale.com/" target="_blank">Go to my Podcasts</a>
+        <a class="btn btn-block btn-danger" href="https://baconsale.com/" target="_blank">Go to my Podcasts</a>
     </div>
 </body>
 
